# fractal_box

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: CMakeRC.cmake  CompilerFlags.cmake  Sanitizers.cmake  compiler_flags.cmake  fractal_box-config.cmake.in  sanitizers.cmake
demos/asteroids/: CMakeLists.txt
demos/asteroids/assets/: CMakeLists.txt
demos/asteroids/assets/shaders/: color.frag  color.vert
demos/asteroids/src/asteroids/: asteroids.cpp  asteroids.hpp  game_consts.cpp  game_systems.cpp  game_systems.hpp  game_types.hpp  game_ui.hpp  graphics_systems.cpp  graphics_systems.hpp  main.cpp  setup_systems.hpp  shaders.cpp  shaders.hpp
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt
engine/assets/shaders/: screen_quad.frag.glsl  screen_quad.vert.glsl
engine/bench/: CMakeLists.txt
engine/bench/src/: CMakeLists.txt  collision_benchmarks.cpp  hashing_benchmarks.cpp  input_benchmarks.cpp  main.cpp  world_benchmarks.cpp
engine/bench/src/bench_common/: CMakeLists.txt  bench_helpers.hpp  old_hash.hpp
engine/include/fractal_box/: CMakeLists.txt
engine/include/fractal_box/components/: CMakeLists.txt  camera.hpp  collision.hpp  sprite.hpp  transform.hpp
engine/include/fractal_box/core/: CMakeLists.txt  algorithm.hpp  alignment.hpp  angle.hpp  array_utils.hpp  assert.hpp  assert_fmt.hpp  assert_levels.hpp  bit_manip.hpp  byte_utils.hpp  chrono_types.hpp  color.hpp  compare.hpp  concepts.hpp  control_flow.hpp  default_utils.hpp  diagnostic.hpp  enum_utils.hpp  error.hpp  function_ref.hpp  functional.hpp  in_place_args.hpp  init_tags.hpp  int128.hpp  int_types.hpp  interval.hpp  iterator_utils.hpp  log_levels.hpp  logging.hpp  math.hpp  memory.hpp  numerical.hpp  out_ptr.hpp  platform.hpp  poly.hpp  preprocessor.hpp  random.hpp  range_concepts.hpp  ref.hpp  relocation.hpp  (+7 more)
engine/include/fractal_box/core/containers/: CMakeLists.txt  indexed_pool.hpp  linear_flat_set.hpp  simple_array.hpp  sparse_set.hpp  type_object_map.hpp  unordered_map.hpp  unordered_set.hpp
engine/include/fractal_box/core/error_handling/: CMakeLists.txt  diagnostic.hpp  error.hpp  result.hpp  status.hpp
engine/include/fractal_box/core/hashing/: CMakeLists.txt  fnv.hpp  hash_digest.hpp  hashed_string.hpp  hasher_utils.hpp  hasher_visitor_base.hpp  hashing_attributes.hpp  hashing_concepts.hpp  rapidhash.hpp  uni_hasher.hpp
engine/include/fractal_box/core/io/: CMakeLists.txt  io_concepts.hpp  span_io.hpp  string_io.hpp  vector_io.hpp
engine/include/fractal_box/core/meta/: CMakeLists.txt  description_types.hpp  meta.hpp  meta_basics.hpp  reflection.hpp  reflection_basics.hpp  type_info.hpp  type_name.hpp  visit_fields.hpp
engine/include/fractal_box/core/serialization/: CMakeLists.txt  sbs_data_format.hpp  serialization_attributes.hpp  serialization_concepts.hpp
engine/include/fractal_box/graphics/: CMakeLists.txt  core_graphics_preset.hpp  core_shaders.hpp  debug_draw_config.hpp  debug_draw_preset.hpp  gl_attributes.hpp  gl_common.hpp  gl_context.hpp  gl_framebuffer.hpp  gl_mesh.hpp  gl_shader_program.hpp  gl_texture.hpp  gl_version.hpp  mesh_utils.hpp  shader_utils.hpp  sprite.hpp
engine/include/fractal_box/math/: CMakeLists.txt  math.hpp  shape_math.hpp  shapes.hpp
engine/include/fractal_box/physics/: CMakeLists.txt  collision.hpp  numerical.hpp
engine/include/fractal_box/platform/: CMakeLists.txt  input.hpp  input_num_codes.hpp  sdl_preset.hpp
engine/include/fractal_box/resources/: CMakeLists.txt  image_io.hpp  resource_utils.hpp
engine/include/fractal_box/runtime/: CMakeLists.txt  core_preset.hpp  message_manager.hpp  message_traits.hpp  queries.hpp  runtime.hpp  system_utils.hpp  tracer_profiler.hpp  world.hpp  world_types.hpp
engine/include/fractal_box/scene/: CMakeLists.txt  camera.hpp  transform.hpp
engine/include/fractal_box/ui/: CMakeLists.txt  dev_ui_preset.hpp  dimgui_preset.hpp  dimgui_utils.hpp
engine/src/fractal_box/: CMakeLists.txt
engine/src/fractal_box/components/: CMakeLists.txt  collision.cpp
engine/src/fractal_box/core/: CMakeLists.txt  assert.cpp  logging.cpp
engine/src/fractal_box/graphics/: CMakeLists.txt  core_graphics_preset.cpp  core_shaders.cpp  debug_draw_preset.cpp  gl_common.cpp  gl_context.cpp  gl_framebuffer.cpp  gl_mesh.cpp  gl_shader_program.cpp  gl_texture.cpp
engine/src/fractal_box/physics/: collision.cpp
engine/src/fractal_box/platform/: CMakeLists.txt  input.cpp  sdl_preset.cpp
engine/src/fractal_box/resources/: CMakeLists.txt  image_io.cpp
engine/src/fractal_box/runtime/: CMakeLists.txt  core_preset.cpp  runtime.cpp  tracer_profiler.cpp
engine/src/fractal_box/ui/: CMakeLists.txt  dev_ui_preset.cpp  dimgui_preset.cpp
engine/test/: CMakeLists.txt
engine/test/src/: CMakeLists.txt  assert_tests_lvl_max.cpp  assert_tests_lvl_none.cpp  bit_manip_tests.cpp  collision_tests.cpp  components_tests.cpp  concepts_tests.cpp  error_handling_tests.cpp  functional_tests.cpp  hashing_tests.cpp  indexed_pool_tests.cpp  input_tests.cpp  io_tests.cpp  linear_flat_set_tests.cpp  math_tests.cpp  message_tests.cpp  meta_tests.cpp  poly_tests.cpp  preprocessor_tests.cpp  ref_tests.cpp  reflection_tests.cpp  result_tests.cpp  scope_tests.cpp  serialization_tests.cpp  sparse_set_tests.cpp  type_index_tests.cpp  type_object_map_tests.cpp  utils_tests.cpp  world_tests.cpp
engine/test/src/detail/: CMakeLists.txt  type_index_tu_helpers.cpp  type_index_tu_helpers.hpp
engine/test/src/test_common/: CMakeLists.txt  hashing_fmt.hpp  test_helpers.hpp  type_index_fmt.hpp
examples/asteroids/: CMakeLists.txt
examples/asteroids/assets/: CMakeLists.txt
examples/asteroids/assets/shaders/: test.frag  test.vert
examples/asteroids/assets_wip/effects/: bullet.xcf  plume.xcf
examples/asteroids/src/asteroids/: CMakeLists.txt  asteroids.cpp  game_consts.hpp  game_systems.cpp  game_types.hpp  game_ui.cpp  graphics_systems.cpp  graphics_systems.hpp  main.cpp  resources.cpp  resources.hpp  setup_systems.hpp  shaders.cpp  shaders.hpp
scripts/: conan_install.sh
